Default SMS to enabled, for parity with previous package versions

--- a/packages/rancher-alerting/rancher-alerting-drivers/charts/questions.yml
+++ b/packages/rancher-alerting/rancher-alerting-drivers/charts/questions.yml
@@ -14,7 +14,7 @@ questions:
     type: boolean
     group: "General"
   - variable: sachet.enabled
-    default: false
+    default: true
     label: Enable SMS
     type: boolean
     group: "General"
