--- a/packages/rancher-alerting/rancher-alerting-drivers/charts/questions.yml
+++ b/packages/rancher-alerting/rancher-alerting-drivers/charts/questions.yml
@@ -3,12 +3,12 @@ categories:
 namespace: cattle-monitoring-system
 questions:
   - variable: prom2teams.enabled
-    default: false
+    default: "false"
     label: Enable Microsoft Teams
     type: boolean
     group: "General"
   - variable: sachet.enabled
-    default: true
+    default: "true"
     label: Enable SMS
     type: boolean
     group: "General"
