Or... the default value lives in values.yaml, not questions.yaml?

--- a/packages/rancher-alerting/rancher-alerting-drivers/charts/values.yaml
+++ b/packages/rancher-alerting/rancher-alerting-drivers/charts/values.yaml
@@ -19,7 +19,7 @@ prom2teams:
   enabled: false
 
 sachet:
-  enabled: false
+  enabled: true
 
 ## Node labels for pod assignment
 ## Ref: https://kubernetes.io/docs/user-guide/node-selection/
