--- a/charts/rancher-alerting-drivers/102.0.0/values.yaml
+++ b/charts/rancher-alerting-drivers/102.0.0/values.yaml
@@ -19,7 +19,7 @@ prom2teams:
   enabled: false
 
 sachet:
-  enabled: false
+  enabled: true
 
 ## Node labels for pod assignment
 ## Ref: https://kubernetes.io/docs/user-guide/node-selection/
